kubernetes/cka/ejercicio7.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: imp-full
