kubernetes/cka/examen_tas_7.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: security
