kubernetes/cka/e11.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: trouble-lab
---
apiVersion: v1
kind: Pod
metadata:
  name: crash-pod
  namespace: trouble-lab
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 10; echo CRASH FIXED; done"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pending-pod
  namespace: trouble-lab
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 10; echo CRASH FIXED; done"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-deploy
  namespace: trouble-lab
  labels:
    app: image-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: image-deploy
  template:
    metadata:
      labels:
        app: image-deploy
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
