kubernetes/cka/ejercicio10.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: secret-lab2
---
apiVersion: v1
kind: Pod
metadata:
  name: api-client
  namespace: secret-lab2
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 20; echo $API_USER $API_TOKEN; done"]
