kubernetes/cka/ejercicio2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage-lab
---
apiVersion: v1
kind: Pod
metadata:
  name: data-writer
  namespace: storage-lab
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sh", "-c"]
    args:
      - "while true; do date >> /data/output.txt; sleep 5; done"
    volumeMounts:
    - name: data-volume
      mountPath: /data
  volumes:
  - name: data-volume
    persistentVolumeClaim:
      claimName: pvc-data
