kubernetes/cka/ejercicio6.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rbac-lab
---
apiVersion: v1
kind: Pod
metadata:
  name: reader
  namespace: rbac-lab
spec:
  serviceAccountName: app-sa
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sh","-c","while true; do sleep 100; done;"]
    ports:
    - containerPort: 80
