kubernetes/cka/ejercicio8.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: maint-lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: maint-lab
  labels:
    app: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
