kubernetes/cka/ejercicio9.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sec-lab
---
apiVersion: v1
kind: Pod
metadata:
  name: db-client
  namespace: sec-lab
spec:
  volumes:
    - name: db-secret
      secret:
        secretName: db-secret
  containers:
  - name: busybox
    image: busybox:1.36
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 15; echo $DB_PASSWORD; done"]
