kubernetes/cka/examen_tas_8.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: debug
---
apiVersion: v1
kind: Pod
metadata:
  name: debug-broken
  namespace: debug
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 5; echo DEBUG_OK; done"]
