kubernetes/cka/examen_tas_9.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: core-writer
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 5; echo timestamps >> /data/out.txt; done"]
    volumeMounts:
    - name: miclaim
      mountPath: /data
  volumes:
  - name: miclaim
    persistentVolumeClaim:
      claimName: pvc-core
