kubernetes/cka/ejercicio1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ckatest
  labels:
    name: ckatest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: ckatest
  labels:
    app: api
    tier: backend
    otra: pepita
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
      tier: backend
  template:
    metadata:
      labels:
        app: api
        tier: backend
    spec:
      containers:
      - name: api
        image: nginx:stable-alpine-kk
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ckatest
spec:
  selector:
    app: api
    tier: backend   
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
