kubernetes/cka/ejercicio4.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns-lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dns-lab
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dns-lab
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: dns-client
  namespace: dns-lab
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sh","-c","while true; do sleep 30; done"]
    ports:
    - containerPort: 80
