kubernetes/cka/examen_tas_11.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dns
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dns
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: dns
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    command: ["sh","-c","curl http://backend-svc"]
