kubernetes/cka/examen1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rbac-exam
---
apiVersion: v1
kind: Namespace
metadata:
  name: debug-exam
---
apiVersion: v1
kind: Pod
metadata:
  name: broken-pod
  namespace: debug-exam
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 5; echo FIXED; done"]
---
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-exam
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: deploy-exam
  labels:
    app: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nginx
        image: nginx:does-not-exist
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: secret-exam
---
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
  namespace: secret-exam
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 10; echo $APP_PASSWORD; done"]
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-exam
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-svc
  namespace: ingress-exam
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: storage-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: pvc-exam
  containers:
    - name: task-pv-container
      image: nginx:alpine
      command: ["sh","-c","while true; do sleep 5; echo timestamps >> /data/out.txt; done"]
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: "/data"
          name: task-pv-storage
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns-exam
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-svc
  namespace: dns-exam
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: dns-exam
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    command: ["sh","-c","curl http://backend-svc"]
---
