kubernetes/cka/ejercicio3.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: net-lab
---
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: net-lab
  labels:
    app: web
spec:
  containers:
  - name: nginx
    image: nginx:stable-alpine
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: net-lab
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-client
  namespace: net-lab
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: client
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: net-lab
  labels:
    role: client
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sh","-c","while true; do sleep 30; done;"]
    ports:
    - containerPort: 8080
