kubernetes/cka/examen2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rbac-hard
---
apiVersion: v1
kind: Namespace
metadata:
  name: crash-hard
---
apiVersion: v1
kind: Pod
metadata:
  name: shell-broken
  namespace: crash-hard
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 3; echo OK; done"]
---
apiVersion: v1
kind: Namespace
metadata:
  name: sched-hard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-hog
  namespace: sched-hard
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: storage-hard
---
apiVersion: v1
kind: Pod
metadata:
  name: writer
  namespace: storage-hard
spec:
  containers:
  - name: nginxpod
    image: nginx:alpine
    command: ["sh","-c","while true; do sleep 5; echo escribiendo >> /data/out.txt"]
    volumeMounts:
    - mountPath: /data
      name: mydir
  volumes:
    - name: mydir
      persistentVolumeClaim:
        claimName: myclaim
---
apiVersion: v1
kind: Namespace
metadata:
  name: net-hard
---
apiVersion: v1
kind: Pod
metadata:
  name: api
  namespace: net-hard
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: net-hard
  labels:
    role: client
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: net-hard
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: client
