kubernetes/cka/examen4.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alpha
---
apiVersion: v1
kind: Pod
metadata:
  name: probe-pod
  namespace: alpha
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    command: ["sh","-c","nginx -g 'daemon off;' && while true; do sleep 10; echo $ENV; done"]
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 15
      periodSeconds: 10
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 15
      periodSeconds: 10
---
apiVersion: v1
kind: Namespace
metadata:
  name: beta
---
apiVersion: v1
kind: Namespace
metadata:
  name: gamma
---
apiVersion: v1
kind: Pod
metadata:
  name: gamma-broken
  namespace: gamma
spec:
  containers:
  - name: nginx
    image: nginx:noexiste
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 4; echo GAMMA_OK; done"]
---
apiVersion: v1
kind: Namespace
metadata:
  name: delta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mem-hog
  namespace: delta
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 900m
---
apiVersion: v1
kind: Pod
metadata:
  name: delta-writer
  namespace: delta
  labels:
    release: "stable"
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    command: ["sh","-c","while true; do sleep 6; echo timestamps >> /data/log.txt; done"]
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: "/data"
      name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: pvc-delta
---
apiVersion: v1
kind: Namespace
metadata:
  name: epsilon
---
apiVersion: v1
kind: Pod
metadata:
  name: server
  namespace: epsilon
  labels:
    role: frontend    
spec:
  containers:
  - name: server
    image: nginx:1.14.2
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: epsilon
spec:
  containers:
  - name: client
    image: nginx:alpine
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: epsilon
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: zeta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: zeta
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: zeta
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: zeta
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    command: ["sh","-c","curl http://backend-svc"]
