kubernetes/cka/examen5.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: omega
---
apiVersion: v1
kind: Pod
metadata:
  name: res-pod
  namespace: omega
spec:
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sh","-c","while true; do sleep 12; echo $level; done"]
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "50m"
      limits:
        memory: "128Mi"
        cpu: "200m"
---
apiVersion: v1
kind: Namespace
metadata:
  name: theta
---
apiVersion: v1
kind: Namespace
metadata:
  name: iota
---
apiVersion: v1
kind: Pod
metadata:
  name: iota-broken
  namespace: iota
spec:
  containers:
  - name: nginx
    image: nginx:noexiste
    ports:
    - containerPort: 80
    command: ["sh","-c","while true; do sleep 6; echo IOTA_OK; done"]
---
apiVersion: v1
kind: Namespace
metadata:
  name: kappa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: kappa
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: kappa-writer
  namespace: kappa
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      command: ["/bin/sh", "-c","while true; do sleep 7; echo timestamps >> /data/output.log; done"]
      volumeMounts:
        - name: vol
          mountPath: /data
  volumes:
    - name: vol
      persistentVolumeClaim:
        claimName: pvc-kappa
---
apiVersion: v1
kind: Namespace
metadata:
  name: lambda
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: lambda
  labels:
    role: frontend
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: lambda
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: lambda
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: mu 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: mu
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: mu
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: mu
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    command: ["sh","-c","curl http://api-svc"]
